--- a/layout-internal/Cargo.toml
+++ b/layout-internal/Cargo.toml
@@ -17,3 +17,4 @@ proc-macro = true
 syn = { version = "2", features = ["derive", "extra-traits"] }
 quote = "1"
 proc-macro2 = "1"
+bit-vec = { version = "0.8.0", default-features = false }
